syntax = "proto3";

package qubic.http.qubic.pb;

option go_package = "github.com/qubic/qubic-http/protobuff/";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message Balance {
  string id = 1;
  int64 balance = 2;
  uint32 valid_for_tick = 3;
  uint32 latest_incoming_transfer_tick = 4;
  uint32 latest_outgoing_transfer_tick = 5;
}

message GetBalanceRequest {
  string id = 1;
}

message GetBalanceResponse {
  Balance balance = 1;
}

message BroadcastTransactionRequest {
  string encoded_transaction = 1;
}

message BroadcastTransactionResponse {
  int32 peers_broadcasted = 1;
  string encoded_transaction = 2;
  string transaction_id = 3;
}

message TickInfo {
  uint32 tick = 1;
  uint32 duration = 2;
  uint32 epoch = 3;
  uint32 initial_tick = 4;
}

message GetTickInfoResponse {
  TickInfo tick_info = 1;
}

message GetBlockHeightResponse {
  TickInfo block_height = 1;
}

message AssetInfo {
  uint32 tick = 1;
  uint32 universe_index = 2;
}

message IssuedAssetData {
  string issuer_identity = 1;
  uint32 type = 2;
  string name = 3;
  int32 number_of_decimal_places = 4;
  string unit_of_measurement = 5;
}

message IssuedAsset {
  IssuedAssetData data = 1;
  AssetInfo info = 2;
}

message OwnedAssetData {
  string owner_identity = 1;
  uint32 type = 2;
  int32 padding = 3;
  uint32 managing_contract_index = 4;
  uint32 issuance_index = 5;
  int64 number_of_units = 6;
  IssuedAssetData issued_asset = 7;
}

message OwnedAsset {
  OwnedAssetData data = 1;
  AssetInfo info = 2;
}

message OwnedAssetsRequest {
  string identity = 1;
}

message OwnedAssetsResponse {
  repeated OwnedAsset owned_assets = 1;
}

message PossessedAssetData {
  string possessor_identity = 1;
  uint32 type = 2;
  int32 padding = 3;
  uint32 managing_contract_index = 4;
  uint32 issuance_index = 5;
  int64 number_of_units = 6;
  OwnedAssetData owned_asset = 7;
}

message PossessedAsset {
  PossessedAssetData data = 1;
  AssetInfo info = 2;
}

message PossessedAssetsRequest {
  string identity = 1;
}

message PossessedAssetsResponse {
  repeated PossessedAsset possessed_assets = 1;
}

service QubicLiveService {
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {
    option (google.api.http) = {
      get: "/balances/{id}"
    };
  };

  rpc BroadcastTransaction(BroadcastTransactionRequest) returns (BroadcastTransactionResponse) {
    option (google.api.http) = {
      post: "/broadcast-transaction"
      body: "*"
    };
  };

  rpc GetTickInfo(google.protobuf.Empty) returns (GetTickInfoResponse) {
    option (google.api.http) = {
      get: "/tick-info"
    };
  };

  rpc GetBlockHeight(google.protobuf.Empty) returns (GetBlockHeightResponse) {
    option (google.api.http) = {
      get: "/block-height"
    };
  };

  rpc GetOwnedAssets(OwnedAssetsRequest) returns (OwnedAssetsResponse) {
    option (google.api.http) = {
      get: "/assets/{identity}/owned"
    };
  };

  rpc GetPossessedAssets(PossessedAssetsRequest) returns (PossessedAssetsResponse) {
    option (google.api.http) = {
      get: "/assets/{identity}/possessed"
    };
  };

}